# snarkOS

./: Cargo.toml
.circleci/: config.yml
algorithms/: Cargo.toml
benchmarks/: Cargo.toml
consensus/: Cargo.toml
consensus/src/: consensus.rs  error.rs  lib.rs  memory_pool.rs  miner.rs
consensus/tests/: consensus_dpc.rs  miner.rs
gadgets/src/algorithms/prf/: blake2s.rs
gadgets/src/curves/templates/bls12/: affine.rs
gadgets/src/curves/templates/twisted_edwards/: mod.rs
metrics/: Cargo.toml
models/src/gadgets/curves/: field.rs  fp.rs  fp12.rs  fp2.rs  fp6_3over2.rs  group.rs
models/src/gadgets/r1cs/: test_constraint_system.rs
models/src/gadgets/utilities/: boolean.rs  select.rs
models/src/gadgets/utilities/bits/: comparator.rs
models/src/gadgets/utilities/uint/: macros.rs  uint128.rs
network/: Cargo.toml
network/src/: lib.rs
network/src/consensus/: blocks.rs  consensus.rs  transactions.rs
network/src/errors/: network.rs  server.rs
network/src/inbound/: connection_reader.rs  inbound.rs
network/src/outbound/: connection_writer.rs  outbound.rs
network/src/peers/: peer_book.rs  peer_info.rs  peers.rs
network/tests/: handshake.rs
objects/: Cargo.toml
parameters/: Cargo.toml
posw/: Cargo.toml
posw/src/: circuit.rs  consensus.rs
rpc/: Cargo.toml
rpc/src/: error.rs  rpc_impl.rs  rpc_impl_protected.rs  rpc_server.rs
rpc/tests/: protected_rpc_tests.rs  rpc_tests.rs
snarkos/: Cargo.toml  main.rs  miner.rs
snarkos/errors/: node.rs
storage/: Cargo.toml
storage/src/: key_value.rs  ledger.rs  lib.rs  mem.rs  rocks.rs
storage/src/objects/: block.rs  block_header.rs  block_path.rs  dpc_state.rs  insert_commit.rs  ledger_scheme.rs  memory_pool.rs  records.rs  transaction.rs
storage/tests/: mod.rs
testing/: Cargo.toml
testing/examples/: test_blocks.rs  test_data.rs
testing/src/consensus/: fixture.rs
testing/src/dpc/: mod.rs
testing/src/network/: mod.rs  sync.rs
testing/src/storage/: mod.rs
toolkit/: Cargo.toml
toolkit/src/dpc/: empty_ledger.rs
