[package]
name = "snarkos-benchmarks"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Benchmarks for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "syncing"
path = "syncing/syncing.rs"
harness = false

[[bench]]
name = "network"
path = "network/network.rs"
harness = false

[[bench]]
name = "posw"
path = "posw/posw.rs"
harness = false

[dependencies]
snarkvm-curves = { path = "/home/ljedrz/git/snarkVM/curves" }
snarkvm-marlin = { path = "/home/ljedrz/git/snarkVM/marlin" }
snarkvm-models = { path = "/home/ljedrz/git/snarkVM/models" }
snarkvm-utilities = { path = "/home/ljedrz/git/snarkVM/utilities" }

snarkos-profiler = { path = "../profiler", version = "1.1.4" }
snarkos-posw = { path = "../posw", version = "1.1.4", features = ["test-helpers"] }
snarkos-network = { path = "../network" }
snarkos-testing = { path = "../testing" }

csv = { version = "1" }
derivative = { version = "2" }
digest = { version = "0.9" }
rand = { version = "0.8" }
rayon = { version = "1" }
smallvec = { version = "1.6" }
criterion = { version = "0.3.4", features = ["async_tokio"] }
rand_xorshift = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
