[package]
name = "snarkos-parameters"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Parameters for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkvm-algorithms = { path = "/home/ljedrz/git/snarkVM/algorithms", default-features = false }
snarkvm-errors = { path = "/home/ljedrz/git/snarkVM/errors", default-features = false }
snarkvm-models = { path = "/home/ljedrz/git/snarkVM/models", default-features = false }
snarkvm-utilities = { path = "/home/ljedrz/git/snarkVM/utilities", default-features = false }

curl = { version = "0.4.34", optional = true }
hex = { version = "0.4.2" }

[dev-dependencies]
snarkvm-curves = { path = "/home/ljedrz/git/snarkVM/curves" }
snarkvm-dpc = { path = "/home/ljedrz/git/snarkVM/dpc" }
snarkvm-marlin = { path = "/home/ljedrz/git/snarkVM/marlin" }
snarkvm-objects = { path = "/home/ljedrz/git/snarkVM/objects" }

snarkos-consensus = { path = "../consensus", version = "1.1.4" }
snarkos-posw = { path = "../consensus", version = "1.1.4" }
snarkos-storage = { path = "../consensus", version = "1.1.4" }

chrono = { version = "0.4", features = ["serde"] }
curl = { version = "0.4.34" }
hex = { version = "0.4.2" }
parking_lot = { version = "0.11.1" }
rand = { version = "0.8" }

[features]
default = [ "remote", "snarkvm-algorithms/default", "snarkvm-models/default" ]
remote = [ "curl" ]
