[package]
name = "snarkos-parameters"
version = "1.2.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parameters for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.snarkvm-parameters]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dependencies.snarkvm-utilities]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"
default-features = false

[dependencies.curl]
version = "0.4.34"
optional = true

[dev-dependencies.snarkvm-curves]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dev-dependencies.snarkvm-dpc]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dev-dependencies.snarkvm-marlin]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dev-dependencies.snarkvm-objects]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dev-dependencies.snarkvm-posw]
git = "https://github.com/ljedrz/snarkVM"
branch = "storage_trait"

[dev-dependencies.snarkos-consensus]
path = "../consensus"
version = "1.1.4"

[dev-dependencies.snarkos-storage]
path = "../storage"
version = "1.1.4"

[dev-dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dev-dependencies.curl]
version = "0.4.34"

[dev-dependencies.hex]
version = "0.4.2"

[dev-dependencies.parking_lot]
version = "0.11.1"

[dev-dependencies.rand]
version = "0.8"

[features]
default = [
  "remote",
  "snarkvm-algorithms/default",
]
remote = [ "curl" ]
