[package]
name = "snarkos-posw"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Proof of Succinct Work circuit implementation based on [KB20]"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkvm-algorithms = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-curves = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" } # needed to instantiate with BLS12-377
snarkvm-errors = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-gadgets = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-marlin = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-models = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-polycommit = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-objects = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" } # needed to instantiate with BLS12-377
snarkvm-parameters = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }
snarkvm-utilities = { git = "https://github.com/ljedrz/snarkVM", branch = "update_rand" }

snarkos-profiler = { path = "../profiler", version = "1.1.4"}

blake2 = { version = "0.8.1" }
rand = { version = "0.8" }
thiserror = "1.0.22"

[dev-dependencies]
rand_xorshift = { version = "0.3" }

[features]
print-trace = [ "snarkos-profiler/print-trace" ]
test-helpers = []
