[package]
name = "snarkos-posw"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Proof of Succinct Work circuit implementation based on [KB20]"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkvm-algorithms = { path = "/home/ljedrz/git/snarkVM/algorithms" }
snarkvm-curves = { path = "/home/ljedrz/git/snarkVM/curves" } # needed to instantiate with BLS12-377
snarkvm-errors = { path = "/home/ljedrz/git/snarkVM/errors" }
snarkvm-gadgets = { path = "/home/ljedrz/git/snarkVM/gadgets" }
snarkvm-marlin = { path = "/home/ljedrz/git/snarkVM/marlin" }
snarkvm-models = { path = "/home/ljedrz/git/snarkVM/models" }
snarkvm-polycommit = { path = "/home/ljedrz/git/snarkVM/polycommit" }
snarkvm-objects = { path = "/home/ljedrz/git/snarkVM/objects" } # needed to instantiate with BLS12-377
snarkvm-parameters = { path = "/home/ljedrz/git/snarkVM/parameters" }
snarkvm-utilities = { path = "/home/ljedrz/git/snarkVM/utilities" }

snarkos-profiler = { path = "../profiler", version = "1.1.4"}

blake2 = { version = "0.9" }
rand = { version = "0.8" }
thiserror = "1.0.22"

[dev-dependencies]
rand_xorshift = { version = "0.3" }

[features]
print-trace = [ "snarkos-profiler/print-trace" ]
test-helpers = []
