[package]
name = "snarkos-storage"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Storage for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[features]
default = ["rocksdb_storage"]
rocksdb_storage = ["rocksdb"]
mem_storage = []

[dependencies]
snarkvm-algorithms = { path = "/home/ljedrz/git/snarkVM/algorithms"}
snarkvm-objects = { path = "/home/ljedrz/git/snarkVM/objects" }
snarkvm-errors = { path = "/home/ljedrz/git/snarkVM/errors" }
snarkvm-models = { path = "/home/ljedrz/git/snarkVM/models" }
snarkvm-parameters = { path = "/home/ljedrz/git/snarkVM/parameters" }
snarkvm-utilities = { path = "/home/ljedrz/git/snarkVM/utilities" }

anyhow = { version = "1.0.37" }
bincode = { version = "1.3.1" }
hex = { version = "0.4.2" }
parking_lot = { version = "0.11.1" }
rand = { version = "0.8" }
rocksdb = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
snarkos-consensus = { path = "../consensus" }

snarkvm-curves = { path = "/home/ljedrz/git/snarkVM/curves" }

snarkos-testing = { path = "../testing" }
