[package]
name = "snarkos-testing"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Testing suite for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[features]
default = ["network"]
network = ["snarkos-network", "snow", "tokio", "tracing", "tracing-futures", "tracing-subscriber"]

[dependencies]
snarkvm-algorithms = { version = "0.0.6" }
snarkvm-curves = { version = "0.0.6" }
snarkvm-dpc = { version = "0.0.6" }
snarkvm-errors = { version = "0.0.6" }
snarkvm-models = { version = "0.0.6" }
snarkvm-objects = { version = "0.0.6" }
snarkvm-parameters = { version = "0.0.6" }
snarkvm-posw = { version = "0.0.6" }
snarkvm-utilities = { version = "0.0.6" }

snarkos-consensus = { path = "../consensus", version = "1.1.4" }
snarkos-network = { path = "../network", version = "1.1.4", optional = true }
snarkos-storage = { path = "../storage", version = "1.1.4"}

anyhow = { version = "1.0.33" }
bincode = { version = "1.3.1" }
once_cell = { version = "1.5.2" }
parking_lot = { version = "0.11.1" }
rand = { version = "0.8" }
rand_xorshift = { version = "0.3" }
snow = { version = "0.7", default-features = false, features = ["libsodium-resolver", "chacha20poly1305", "blake2", "sha2", "x25519-dalek", "rand"], optional = true }
tokio = { version = "1", features = ["macros", "time"], optional = true }
tracing = { default-features = false, features = ["log"], version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
