[package]
name = "snarkos-toolkit"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "A developer toolkit for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[dependencies]
snarkvm-algorithms = { path = "/home/ljedrz/git/snarkVM/algorithms", default-features = false }
snarkvm-dpc = { path = "/home/ljedrz/git/snarkVM/dpc", default-features = false }
snarkvm-errors = { path = "/home/ljedrz/git/snarkVM/errors", default-features = false }
snarkvm-models = { path = "/home/ljedrz/git/snarkVM/models", default-features = false }
snarkvm-objects = { path = "/home/ljedrz/git/snarkVM/objects", default-features = false }
snarkvm-utilities = { path = "/home/ljedrz/git/snarkVM/utilities", default-features = false }

anyhow = { version = "1.0.37" }
hex = { version = "0.4.2" }
rand = { version = "0.7", default-features = false, features = ["wasm-bindgen"] }
thiserror = { version = "1.0" }
wasm-bindgen = { version = "0.2.68" }

[dev-dependencies]
criterion = { version = "0.3.1" }
hex = { version = "0.4.2" }
rand_chacha = { version = "0.2", default-features = false }
wasm-bindgen-test = { version = "0.3.18" }
